--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ author:
 
 # Add links to the sidebar.
 menu:
+  - title:             Bio
+    url:               /bio
   - title:             Publications
     url:               /publications
   - title:             Sources
