--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ author:
     github: mrsergazinov
     email: mailto:mrsergazinov@tamu.edu
     linkedin: renatsergazinov
+    google: https://scholar.google.com/citations?user=OhV6QOkAAAAJ&hl=en
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
