--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ author:
     github: mrsergazinov
     email: mailto:mrsergazinov@tamu.edu
     linkedin: renatsergazinov
+    twitter: SergazinovRenat
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
