--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,9 @@ author:
   email:               mrsergazinov@tamu.edu
   social:
     github: mrsergazinov
-    twitter: SergazinovRenat
+    email: mailto:mrsergazinov@tamu.edu
     linkedin: renatsergazinov
+    twitter: SergazinovRenat
     
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
