--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,3 +6,4 @@ author:
     github: mrsergazinov
     email: mailto:mrsergazinov@tamu.edu
     linkedin: renatsergazinov
+    twitter: SergazinovRenat
