--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ lang:                  en
 title:                 Renat Sergazinov
 
 # A shorter description for the sidebar.
-tagline:               Ph.D Student in Statistics at Texas A&M University
+tagline:               Ph.D Statistics
 
 # A list of keywords for your blog
 keywords:              []
