--- a/_config.yml
+++ b/_config.yml
@@ -54,11 +54,9 @@ menu:
   - title:             Bio
     url:               /bio
   - title:             CV
-    url: https://drive.google.com/file/d/1-N6sYMpYoAFKtGYILjIJvpTSZAAfJZox/view?usp=sharing
-  - title:             Publications
-    url:               /publications
-  - title:             Sources
-    url:               /sources
+    url:               https://drive.google.com/file/d/1-N6sYMpYoAFKtGYILjIJvpTSZAAfJZox/view?usp=sharing
+  - title:             Misc
+    url:               /misc
 
 
 # Theme
